# zh-revival

./: .gitignore  AGENTS.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DEPENDENCIES.md  PROGRESS.md  resolve_addr.cs  temp_dia_lookup.cpp  vcpkg.json
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/toolchains/: mingw32.cmake
.github/workflows/: ci-build.yml  ci-release.yml
Generals/: .gitignore
GeneralsMD/: .gitignore
GeneralsMD/Code/GameEngine/Include/Common/: AcademyStats.h  ActionManager.h  ArchiveFileSystem.h  AsciiString.h  AudioAffect.h  AudioEventInfo.h  AudioEventRTS.h  AudioRandomValue.h  BezierSegment.h  BitFlagsIO.h  BorderColors.h  BuildAssistant.h  CDManager.h  CopyProtection.h  DataChunk.h  DrawModule.h  DynamicAudioEventInfo.h  FileSystem.h  FunctionLexicon.h  GameAudio.h  GameCommon.h  GameLOD.h  GameMemory.h  GameType.h  Geometry.h  GlobalData.h  INI.h  KindOf.h  LadderPreferences.h  Language.h  List.h  LocalFile.h  MapObject.h  MessageStream.h  ModManager.h  ModelState.h  Module.h  NameKeyGenerator.h  OSDisplay.h  PerfTimer.h  (+22 more)
GeneralsMD/Code/GameEngine/Include/GameClient/: Anim2D.h  AnimateWindowManager.h  ClientRandomValue.h  CommandXlat.h  ControlBar.h  ControlBarScheme.h  DisconnectMenu.h  Display.h  Drawable.h  EstablishConnectionsMenu.h  Eva.h  Gadget.h  GadgetTextEntry.h  GameClient.h  GameWindow.h  InGameUI.h  ParticleSys.h  ProcessAnimateWindow.h  RadiusDecal.h  Shadow.h  Shell.h  ShellHooks.h  Smudge.h  Snow.h  Statistics.h  TerrainRoads.h  TerrainVisual.h  VideoPlayer.h  View.h  WindowVideoManager.h
GeneralsMD/Code/GameEngine/Include/GameLogic/: AI.h  AIPathfind.h  AIStateMachine.h  ArmorSet.h  CrateSystem.h  Damage.h  GameLogic.h  GhostObject.h  Locomotor.h  LogicRandomValue.h  Object.h  PartitionManager.h  Powers.h  ScriptActions.h  ScriptEngine.h  TerrainLogic.h  Weapon.h  WeaponSet.h  WeaponSetType.h  WeaponStatus.h
GeneralsMD/Code/GameEngine/Include/GameNetwork/: Connection.h  DisconnectManager.h  DownloadManager.h  FirewallHelper.h  GameSpy.h  GameSpyChat.h  GameSpyGameInfo.h  NAT.h  NetPacket.h  User.h  udp.h
GeneralsMD/Code/GameEngine/Include/Precompiled/: PreRTS.h
GeneralsMD/Code/GameEngine/Source/Common/: BitFlags.cpp  CRCDebug.cpp  CommandLine.cpp  DamageFX.cpp  GameEngine.cpp  GameLOD.cpp  GameMain.cpp  GlobalData.cpp  MessageStream.cpp  ModManager.cpp  MultiplayerSettings.cpp  PerfTimer.cpp  RandomValue.cpp  Recorder.cpp  StateMachine.cpp  StatsCollector.cpp  TerrainTypes.cpp  UserPreferences.cpp  crc.cpp  version.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/: Credits.cpp  DisplayString.cpp  Drawable.cpp  FXList.cpp  GameClient.cpp  GameText.cpp  GlobalLanguage.cpp  InGameUI.cpp  LanguageFilter.cpp  MapUtil.cpp  Snow.cpp  Statistics.cpp  Water.cpp
GeneralsMD/Code/GameEngine/Source/GameNetwork/: Connection.cpp  ConnectionManager.cpp  DisconnectManager.cpp  FileTransfer.cpp  FirewallHelper.cpp  FrameData.cpp  FrameDataManager.cpp  FrameMetrics.cpp  GUIUtil.cpp  GameInfo.cpp  GameSpyChat.cpp  GameSpyGP.cpp  GameSpyGameInfo.cpp  IPEnumeration.cpp  LANAPI.cpp  LANAPICallbacks.cpp  LANAPIhandlers.cpp  LANGameInfo.cpp  NAT.cpp  NetCommandList.cpp  NetCommandMsg.cpp  NetCommandWrapperList.cpp  NetPacket.cpp  Network.cpp  NetworkUtil.cpp  Transport.cpp  udp.cpp
GeneralsMD/Code/GameEngineDevice/Source/MilesAudioDevice/: MilesAudioManager.cpp
GeneralsMD/Code/Include/compat/: commctrl.h  crtdbg.h  dbt.h  ddraw.h  dinput.h  direct.h  dsound.h  eh.h  io.h  malloc.h  mbstring.h  mmsystem.h  new.h  oaidl.h  objbase.h  ole2.h  osdep.h  process.h  shellapi.h  shlobj.h  shlwapi.h  tchar.h  winbase.h  windows.h  windowsx.h  winerror.h  wininet.h  winioctl.h  winnls.h  winnt.h  winreg.h  winsock.h  winsock2.h  winuser.h
GeneralsMD/Code/Include/compat/osdep/: osdep.h
GeneralsMD/Code/Libraries/Stubs/: BenchmarkStub.cpp  BinkVideoStub.cpp  BinkVideoStub.h  D3DXMath.h  D3dx8core.h  D3dx8tex.h  FFmpegBinkShim.cpp  GameSpyStub.cpp  GameSpyStub.h  MilesSoundStub.cpp  MilesSoundStub.h  OpenALMilesShim.cpp  SafeDiscStub.cpp  SafeDiscStub.h  bink.h  d3d8.h  d3d8caps.h  d3d8types.h  d3dx8.h  d3dx8math.h  gnu_regex.h  mss.h  srMatrix4x3.hpp  srVector2.hpp  srVector3.hpp  srVector3i.hpp
GeneralsMD/Code/Main/: BuildVersion.h  GeneratedVersion.h  RTS.RC  WinMain.cpp
GeneralsMD/Code/Tools/Autorun/: GameText.cpp  Locale_API.h  WSYS_file.h  Wnd_file.cpp  autorun.cpp
GeneralsMD/Code/Tools/CRCDiff/: expander.h
GeneralsMD/Code/Tools/ParticleEditor/: CButtonShowColor.h
GeneralsMD/Code/Tools/matchbot/: generals.h
GeneralsMD/Code/Tools/wolSetup/: wolInit.cpp
build_map/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  benchmark_lib.vcxproj  benchmark_lib.vcxproj.filters  cmake_install.cmake  compression.vcxproj  compression.vcxproj.filters  gameengine.vcxproj  gameengine.vcxproj.filters  gameenginedevice.vcxproj  gameenginedevice.vcxproj.filters  profile.vcxproj  profile.vcxproj.filters  profile_stub.cpp  ww3d2.vcxproj  ww3d2.vcxproj.filters  wwaudio.vcxproj  wwaudio.vcxproj.filters  wwdebug.vcxproj  wwdebug.vcxproj.filters  wwdownload.vcxproj  wwdownload.vcxproj.filters  wwlib.vcxproj  wwlib.vcxproj.filters  wwmath.vcxproj  wwmath.vcxproj.filters  wwsaveload.vcxproj  wwsaveload.vcxproj.filters  wwutil.vcxproj  wwutil.vcxproj.filters  zh-revival.slnx  zh-revival.vcxproj  zh-revival.vcxproj.filters  zh_stubs.vcxproj  zh_stubs.vcxproj.filters
build_map/tools/: cmake_install.cmake  zh-replay-info.vcxproj  zh-replay-info.vcxproj.filters  zh-replay-validate.vcxproj  zh-replay-validate.vcxproj.filters  zhreplay.vcxproj  zhreplay.vcxproj.filters
collab/: chat.txt
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MEMORY_SAFETY_AUDIT.md  REPLAY_FORMAT.md  RNG_AUDIT.md  SECURITY_AUDIT_P2.md  SECURITY_AUDIT_P4.md
docs/modding/: INI_REFERENCE.md  LINUX_BUILD.md  MACOS_BUILD.md
tools/: CMakeLists.txt
tools/libzhreplay/: zhreplay.c  zhreplay.h
tools/zh-replay-info/: main.c
tools/zh-replay-validate/: main.c
(+634 files in other folders)
